@@ -900,6 +900,52 @@ xfdesktop_file_utils_trash_files(GList *files,
 }
 
 void
+xfdesktop_file_utils_empty_trash(GdkScreen *screen,
+                                 GtkWindow *parent)
+{
+    DBusGProxy *trash_proxy;
+    
+    g_return_if_fail(GDK_IS_SCREEN(screen) || GTK_IS_WINDOW(parent));
+    
+    if(!screen)
+        screen = gtk_widget_get_screen(GTK_WIDGET(parent));
+    
+    trash_proxy = xfdesktop_file_utils_peek_trash_proxy();
+    if(trash_proxy) {
+        GError *error = NULL;
+        gchar *display_name = gdk_screen_make_display_name(screen);
+        gchar *startup_id = g_strdup_printf("_TIME%d", gtk_get_current_event_time());
+
+        xfdesktop_file_utils_set_window_cursor(parent, GDK_WATCH);
+        
+        if(!xfdesktop_trash_proxy_empty_trash(trash_proxy,
+                                              display_name, startup_id,
+                                              &error))
+        {
+            xfce_message_dialog(parent,
+                                _("Trash Error"), GTK_STOCK_DIALOG_ERROR,
+                                _("Could not empty the trash"),
+                                error->message, GTK_STOCK_CLOSE, GTK_RESPONSE_ACCEPT, 
+                                NULL);
+
+            g_error_free(error);
+        }
+
+        xfdesktop_file_utils_set_window_cursor(parent, GDK_LEFT_PTR);
+        
+        g_free(startup_id);
+        g_free(display_name);
+    } else {
+        xfce_message_dialog(parent,
+                            _("Trash Error"), GTK_STOCK_DIALOG_ERROR,
+                            _("Could not empty the trash"),
+                            _("This feature requires a trash service to "
+                              "be present (such as the one supplied by Thunar)."),
+                            GTK_STOCK_CLOSE, GTK_RESPONSE_ACCEPT, NULL);
+    }
+}
+
+void
 xfdesktop_file_utils_create_file(GFile *parent_folder,
                                  const gchar *content_type,
                                  GdkScreen *screen,
