@@ -74,6 +74,8 @@ void xfdesktop_file_utils_rename_file(GFile *file,
 void xfdesktop_file_utils_trash_files(GList *files,
                                        GdkScreen *screen,
                                        GtkWindow *parent);
+void xfdesktop_file_utils_empty_trash(GdkScreen *screen,
+                                      GtkWindow *parent);
 void xfdesktop_file_utils_unlink_files(GList *files,
                                        GdkScreen *screen,
                                        GtkWindow *parent);
