@@ -7,6 +7,7 @@ Xfdesktop 4.x.y
     Patch by xaizek@gmail.com.
   * Scroll to the selected background in the settings (bug #7087).
   * Implement monitoring for special file icons (bug #6986).
+  * Implement open and empty actions for the trash.
 
 
 Xfdesktop 4.8.0
